docs: javac as the build runs it — decision, notes, worklog and ROADMAP
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01UKitBMB264Kkt7CfzpJ4sM